add auditory visual accessibility

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -6,10 +6,24 @@ title: Accessibility
 %>
 
 <p>
-  FOSDEM welcomes all open source developers!  While we don't own the university
+  FOSDEM welcomes all free software and open source developers!  While we don't own the university
   campus and have little control over its accessibility, we have tried to find
   ways for developers with physical limitations to make the most of the event.
 </p>
+<h3>Visual or auditory needs</h3>
+
+<p>For people with visual or auditory needs, marked places near the
+speaker are available in the following rooms:</p>
+
+<ul>
+ <li>H.2215 (Ferrer)</li>
+ <li>UA2.220 (Guilissen)</li>
+ <li>UB2.252A (Lameere)</li>
+ <li>UD2.120 (Chavanne)</li>
+ <li>UD2.218A</li<
+ <li>Janson</li>
+ <li>K.1.105 (La Fontaine)</li>
+</ul>
 
 <h3>Accessibility contact</h3>
 <p>
