stands: correct typo

--- a/content/stands.html
+++ b/content/stands.html
@@ -17,7 +17,7 @@ stands:
    - KDE
    - GNOME
    - LibreOffice
-   - Kolab and Roudcube
+   - Kolab and Roundcube
    - Enlightenment
    - ownCloud
    - illumos
