--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -57,13 +57,15 @@ opportunity to taste some of the finest
 
 <h2>Security measures / access control</h2>
 <p>
-  We have reserved the ground floor of the bar (<em>Delirium Taphouse</em>) and
-  the first floor (<em>Hoppy Loft</em>) as a private party for FOSDEM.  The
-  Delirium Caf&eacute; has offered us an extra room so we will be able to move
-  around a bit easier. Delirium Security will help us keep this area
-  FOSDEM-only. If you meet a guard at the entrance to the bar, make it clear to
-  him that you are there for the FOSDEM party. Wearing appropriately geeky
-  attire tends to do the trick, as does mentioning the name FOSDEM.
+  We have reserved the ground floor of the bar (<em>Delirium Caf&eacute;</em>)
+  and the first floor (<em>Hoppy Loft</em>) as a private party for FOSDEM, 
+  and this between 18h00 and 2h00. You are welcome to join before 18h00, as 
+  well as stay after 2h00. The Delirium Caf&eacute; has been extended some more, 
+  so we will be able to move around a bit easier. FOSDEM volunteers will help us keep this area
+  FOSDEM-only. If you meet a volunteer or a guard at the entrance to the bar or at
+  the entrace to the alley, make it clear to him or her that you are there for the
+  FOSDEM party. Wearing appropriately geeky attire tends to do the trick, as does 
+  mentioning the name FOSDEM.
 </p>
 
 <h2>Beer Tokens</h2>
@@ -75,8 +77,10 @@ opportunity to taste some of the finest
   Tokens may be bought individually, but FOSDEM staff prefers to deal with paper
   money rather than metal money.
   It’s lighter and easier to sort.
-  FOSDEM tokens are also accepted at Floris Bar (across the alley from Delirium)
-  as well as at the bar in the basement.
+  FOSDEM tokens are also accepted at the <em>Floris Bar</em>&mdash;consisting of
+  the <em>Tequileria</em>, the <em>Garden</em> and the <em>Monasterium</em>&mdash;
+  (across the alley from the <em>Delirium Caf&eacute;</em>)
+  as well as at the bar in the basement (<em>Taphouse</em>).
 </p>
 
 <p>
@@ -111,8 +115,8 @@ opportunity to taste some of the finest
 <p>
   Sadly, even the FOSDEM Beer Event is subject to the fundamental laws of
   physics.
-  We were unable to get an exception for the principle that no two solid objects
-  can occupy the same space at the same time.
+  Our request for an exception for the principle that no two solid objects
+  can occupy the same space at the same time resulted in an <code>RSET</code>.
   If you find the bar getting too crowded, it might help to go for dinner and
   come back later.
   The bar will be open until 06:00 (that’s 6am to intercontinental geeks).
@@ -120,7 +124,8 @@ opportunity to taste some of the finest
   (we have a conference to set up early in the morning), the tokens will be valid
   all night and after tokens run out, beer can be exchanged directly for cash
   too.
-  From past experience, the bar service has a very high packet loss between 23:00 and 01:00.
+  From past experience, the bar service has a very high packet loss, as well as
+  a high number of collisions and retries, between 23:00 and 01:00.
 </p>
 
 <h2>A note of caution</h2>
@@ -148,3 +153,11 @@ opportunity to taste some of the finest
     <img src="asset:beermap" alt="map to the Beer Event venue"/>
   </a>
 </div>
+
+<h2>Footnote</h2>
+<p>
+  FOSDEM is always looking for volunteers, even for the Beer Event. If you want to apply,
+  have a look at the <a href="http://volunteer.fosdem.org" alt="link to FOSDEM Volunteer website">
+  Volunteer website</a>
+</p>
+
