updating beerevent page

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -17,7 +17,7 @@ opportunity to taste some of the finest
     class="dtstart">
     <%= (days.first[:conference_day] - 1).strftime("%A, %e %B %Y") %>
   </span>
-  from 17:00(-ish) onwards, but feel free to join the party at any time of the
+  from 16h00 onwards, but feel free to join the party at any time of the
   evening.
   We will be there until the bar closes (well after midnight).
 </p>
@@ -71,12 +71,15 @@ opportunity to taste some of the finest
 <h2>Beer Tokens</h2>
 <p>
   Tokens are &euro;4 each or &euro;3.5 each if you buy ten or more at a time.
-  One token, one beer.
-  For the sake of simplicity, “soda” (cola, lemonade, etc) is beer too&mdash;at
-  least as far as tokens are concerned.
-  Tokens may be bought individually, but FOSDEM staff prefers to deal with paper
-  money rather than metal money.
+  One token, one glass of draught beer (<em>draft</em> for our intercontinental
+  visitors).
+  For the sake of simplicity, <em>soda</em> (cola, lemonade, water, etc) is beer
+  too&mdash;at least as far as tokens are concerned.
+  Tokens may be bought individually or in bigger quantities, but FOSDEM staff 
+  prefers to deal with paper money rather than metal money.
   It’s lighter and easier to sort.
+  Tokens will be sold as of 18h00 (at the same time when our reserver space becomes
+  exclusive for FOSDEM visitors).
   FOSDEM tokens are also accepted at the <em>Floris Bar</em>&mdash;consisting of
   the <em>Tequileria</em>, the <em>Garden</em> and the <em>Monasterium</em>&mdash;
   (across the alley from the <em>Delirium Caf&eacute;</em>)
@@ -119,13 +122,13 @@ opportunity to taste some of the finest
   can occupy the same space at the same time resulted in an <code>RSET</code>.
   If you find the bar getting too crowded, it might help to go for dinner and
   come back later.
-  The bar will be open until 06:00 (that’s 6am to intercontinental geeks).
+  Some of the bars will be open until 06:00 (that’s 6am to intercontinental geeks).
   While FOSDEM staff will stop distributing tokens a couple of hours before closure
   (we have a conference to set up early in the morning), the tokens will be valid
   all night and after tokens run out, beer can be exchanged directly for cash
   too.
-  From past experience, the bar service has a very high packet loss, as well as
-  a high number of collisions and retries, between 23:00 and 01:00.
+  From past experience the bar service has a very high packet loss&mdash;as well as
+  a high number of collisions and retries&mdash;between 23:00 and 01:00.
 </p>
 
 <h2>A note of caution</h2>
@@ -157,7 +160,7 @@ opportunity to taste some of the finest
 <h2>Footnote</h2>
 <p>
   FOSDEM is always looking for volunteers, even for the Beer Event. If you want to apply,
-  have a look at the <a href="http://volunteer.fosdem.org" alt="link to FOSDEM Volunteer website">
+  have a look at the <a href="http://volunteers.fosdem.org" alt="link to FOSDEM Volunteer website">
   Volunteer website</a>
 </p>
 
