transportation: Add details of shuttle buses and taxis

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -87,6 +87,24 @@ sponsors_under_navigation: true
 All of them stop at "ULB".<br/>
 </p>
 
+<a name="shuttle"></a><h3>Free shuttle buses</h3>
+<p>On Sunday afternoon, FOSDEM provides a free shuttle bus service from
+the conference venue to <strong>Brussels South (Midi)</strong> railway
+station which has a regular service to many popular destinations within
+Belgium and to surrounding countries.</p>
+<p>Three buses will provide the service between <strong>15:30</strong>
+and <strong>19:30</strong>. The journey takes approximately 20 minutes.
+Due to roadworks, the buses stop at a <u>different location</u> than in
+previous years. Buses depart from <strong>Av. Franklin
+Roosevelt</strong> (next to the food vans).</p>
+<p>Between 15:30 and 17:15, a bus is scheduled to depart every 15
+minutes. Based on previous experience, we expect the buses to be
+busiest from 17:30 on. We will abandon our fixed schedule then with
+buses departing as soon as they are full to maximize throughput. The
+last departure will be at 19:30.</p>
+<p>If you don't want to queue, why not leave later? There are plenty of
+bars in the neighbourhood where you can pass the time!</p>
+
 <a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
@@ -106,13 +124,13 @@ All of them stop at "ULB".<br/>
 <ul style="margin-top:0">
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25">Tram 25</a>, direction Boondael Gare</li>
 <li>Get off at stop <u>ULB</u>.</li></ul></p>
-<p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> (walk)):
+<p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> walking):
 <ul style="margin-top:0">
 <li><a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=Paul+H%C3%A9gerlaan&amp;daddr=50.817107,4.392364+to:Etterbeek+station&amp;geocode=Fb9WBwMdntZCAA%3B%3B&amp;hl=en&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=16&amp;via=1&amp;dirflg=w&amp;sll=50.816104,4.387987&amp;sspn=0.010087,0.01442&amp;ie=UTF8&amp;t=h&amp;z=16">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
 <li><a href="http://www.belgianrail.be/jp/sncb-nmbs-routeplanner/query.exe/en?S=Etterbeek+%5bB%5d&Z=Brussel-Zuid&date=03/02/2013&time=18:30&start=1&timesel=depart">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
-<a name="parking"></a><h3>Parking</h3>
+<a name="parking"></a><h3>By car: parking</h3>
 <p>
 If you come to FOSDEM by car, you can park your car on the campus.
 The parking is located between Janson and the K building. 
@@ -126,9 +144,9 @@ Do not leave any valuables in your car!
 
 <p>
 The parking of the campus can be very busy since early morning
-during both days. An alternative is to leave your car in the 
+during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
-Parking Sablon-Polaert</a>, from there to take the 
+Parking Sablon-Polaert</a>, from there to take the
 <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
 direction Mus&eacute;e du Tram, then get off at stop <u>ULB</u>.
 </p>
@@ -143,6 +161,17 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
 <li>Get off at stop <u>ULB</u>.</li>
 </ul>
+</p>
+
+<a name="taxi"></a><h3>By taxi</h3>
+<p>
+If you need a taxi, we suggest calling Taxi Verts on
+<tt>+32 2 349 49 49</tt>. The address of the venue is:
+<br/> &nbsp; ULB Campus Solbosch
+<br/> &nbsp; 50, Av. Franklin D. Roosevelt
+<br/> &nbsp; 1050 Bruxelles
+<br/>The location where taxis expect to pick you up is marked
+on the map.
 </p>
 
 <hr />
