stands: Include stand locations; expand 'ASF' to avoid confusion

--- a/content/stands.html
+++ b/content/stands.html
@@ -4,8 +4,15 @@
 # Use the format:   - Stand name: URL
 title: Stands
 stands:
-  All [in random order] (54):
-# H (7):
+# All [in random order] (54):
+  AW (6):
+   - Coreboot / Flashrom
+   - PTXdist and Barebox
+   - Open hardware laptops
+   - JavaCard Pro
+   - OpenEmbedded
+   - Brainduino
+  H (7):
    - CoreOS
    - MongoDB
    - BBC Open Source
@@ -13,7 +20,7 @@ stands:
    - WolfSSL
    - OSM / OpenArialMap
    - MySQL
-# K [level 1] (25):
+  K [level 1, group A] (10):
    - KDE
    - GNOME
    - LibreOffice
@@ -24,6 +31,7 @@ stands:
    - OpenSuse
    - CentOS
    - Fedora
+  K [level 1, group B] (7):
    - ReactOS
    - BAREOS
    - Debian
@@ -31,6 +39,7 @@ stands:
    - OpenMandriva
    - Mageia
    - Gentoo
+  K [level 1, group C] (8):
    - FSFE
    - OpenVZ
    - Xen
@@ -39,9 +48,9 @@ stands:
    - Gluster
    - DRLM
    - CAcert
-# K [level 2] (16):
+  K [level 2] (16):
    - Mozilla
-   - ASF
+   - Apache Software Foundation
    - Eclipse Foundation
    - Jenkins
    - Wikis and CMS
@@ -56,13 +65,6 @@ stands:
    - PicoTCP
    - Matrix
    - The Realtime Lounge
-# AW (6):
-   - Coreboot / Flashrom
-   - PTXdist and Barebox
-   - Open hardware laptops
-   - JavaCard Pro
-   - OpenEmbedded
-   - Brainduino
 
 ---
 <%
