--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -13,7 +13,7 @@ h = begin
     end
 size = h.values.map(&:size).inject(:+)
 %>
-<h1><%= events.size %> Events</h1>
+<h1><%= size %> Events</h1>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
