transportation: update instructions and map due to roadworks on Buyl

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
 
-<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
+<img style="float: right; text-align: right" src="asset:campusmap_roadworks" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
 
 <div class="location-text">
   <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
@@ -52,7 +52,8 @@ sponsors_under_navigation: true
 </strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondael Gare</strong></li>
-<li><strong>Stop: </strong>ULB</li>
+<li><s><strong>Stop: </strong>ULB</s></li>
+<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/netinfo_inforeseau/plan_25-94.pdf">roadworks</a>, the stop "ULB" is skipped. Use the stop "Cambre-Étoile" and take the special T-bus which stops at ULB on Av. Franklin Roosevelt.
 </ul></dd>
 
 <dt><strong>
@@ -60,7 +61,7 @@ sponsors_under_navigation: true
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
-<li><strong>Stop: </strong>ULB</li>
+<li><s><strong>Stop: </strong>ULB</s></li>
 <li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/plan%20travaux%20avenue%20Buyl.pdf">roadworks</a>, bus 71 will make a detour and skip the stop "ULB". Use the stops "Buyl" or "Cimmetière d'Ixelles", which are a 5 minute walk from the campus.</li>
 </ul></dd>
 
@@ -70,6 +71,7 @@ sponsors_under_navigation: true
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>Dev&egrave;ze-ULB</strong></li>
 <li><strong>Stop: </strong>ULB</li>
+<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/plan%20travaux%20avenue%20Buyl.pdf">roadworks</a>, bus 72 will make a detour, but will stop at "ULB".
 </ul></dd>
 
 <dt><strong>
@@ -78,14 +80,11 @@ sponsors_under_navigation: true
 </strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>Louise</strong> towards <strong>Mus&eacute;e du Tram</strong></li>
-<li><strong>Stop: </strong>ULB</li>
+<li><s><strong>Stop: </strong>ULB</s></li>
+<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/netinfo_inforeseau/plan_25-94.pdf">roadworks</a>, the stop "ULB" is skipped. Use the stop "Cambre-Étoile" and take the special T-bus which stops at ULB on Av. Franklin Roosevelt.
 </ul></dd>
 
 </dl>
-
-<p>
-All of them stop at "ULB".<br/>
-</p>
 
 <a name="shuttle"></a><h3>Free shuttle buses</h3>
 <p>On Sunday afternoon, FOSDEM provides a free shuttle bus service from
@@ -111,19 +110,17 @@ bars in the neighbourhood where you can pass the time!</p>
 <li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a></li>
 <li>Get off at station <u>Louise</u></li>
 <li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, direction Mus&eacute;e du Tram</li>
-<li>Get off at stop <u>ULB</u>.</li></ul></p>
+<li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <br />
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
-<li>Get off at stop <u>ULB</u>.</li>
-<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/plan%20travaux%20avenue%20Buyl.pdf">roadworks</a>, bus 71 will make a detour and skip the stop "ULB". Use the stops "Buyl" or "Cimmetière d'Ixelles", which are a 5 minute walk from the campus.</li>
-</ul></p>
+<li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <br />
 <p>From <strong>Brussels North</strong> ("<strong>Bruxelles Nord</strong>" or "<strong>Gare du Nord</strong>") station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25">Tram 25</a>, direction Boondael Gare</li>
-<li>Get off at stop <u>ULB</u>.</li></ul></p>
+<li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> walking):
 <ul style="margin-top:0">
 <li><a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=Paul+H%C3%A9gerlaan&amp;daddr=50.817107,4.392364+to:Etterbeek+station&amp;geocode=Fb9WBwMdntZCAA%3B%3B&amp;hl=en&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=16&amp;via=1&amp;dirflg=w&amp;sll=50.816104,4.387987&amp;sspn=0.010087,0.01442&amp;ie=UTF8&amp;t=h&amp;z=16">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
@@ -135,7 +132,8 @@ bars in the neighbourhood where you can pass the time!</p>
 If you come to FOSDEM by car, you can park your car on the campus.
 The parking is located between Janson and the K building. 
 See the map on this page for the exact location.
-The entrance to the parking is next to the H building.
+The entrance to the parking is on Av. Franklin Roosevelt next to the H building.
+Note: There is <strong>no entrance</strong> nor exit on Av. Adolphe Buyl.
 </p>
 <p>
 You can park here at your own risk.
@@ -148,7 +146,8 @@ during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
 Parking Sablon-Polaert</a>, from there to take the
 <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
-direction Mus&eacute;e du Tram, then get off at stop <u>ULB</u>.
+direction Mus&eacute;e du Tram.
+Then follow the <a href="#bus">instructions above</a>.
 </p>
 
 
@@ -159,7 +158,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <li>Take the <u>train</u> to Brussels</li>
 <li>Get off at <u>Brussels Central</u> station</li>
 <li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
-<li>Get off at stop <u>ULB</u>.</li>
+<li>Follow the <a href="#bus">instructions above</a>.</li>
 </ul>
 </p>
 
