stands: Add O'Reilly

--- a/content/stands.html
+++ b/content/stands.html
@@ -12,7 +12,7 @@ stands:
    - JavaCard Pro
    - OpenEmbedded
    - Brainduino
-  H (7):
+  H (8):
    - CoreOS
    - MongoDB
    - BBC Open Source
@@ -20,6 +20,7 @@ stands:
    - WolfSSL
    - OSM / OpenArialMap
    - MySQL
+   - O'Reilly Media
   K [level 1, group A] (10):
    - KDE
    - GNOME
