index: Announce final schedule, fringe and mobile apps.

--- a/content/index.html
+++ b/content/index.html
@@ -48,6 +48,15 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
         Sunday 31 January 2016.
       </p>
     </div>
+
+    <div class="announcement-block">
+      <h2>Schedule</h2>
+      <p>
+	The <a href="page:/schedule/">complete schedule</a> for the weekend is now available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a>.
+	More events happening in the days around the FOSDEM weekend form the <a href="page:/fringe/">FOSDEM Fringe</a>.
+      </p>
+    </div>
+
   </div>
 
   <div class="news-block">
