--- a/content/schedule.html
+++ b/content/schedule.html
@@ -293,6 +293,10 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   Further details are available on the <a href="page:/fringe/">FOSDEM Fringe page</a>.
 </p>
 
+<h3>Mobile Apps</h3>
+<p>People have submitted a variety of <a href="page:/schedule/mobile/">apps for mobile devices</a> that display the FOSDEM schedule.
+</p>
+
 <h3>Raw schedule data</h3>
 <p>
 The schedule data is available in:
