streaming: link to page

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -64,6 +64,8 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
 </p>
 
+  <p>During the event, the <a href="page:/schedule/streaming">live streaming page</a> is also 
+  updated every few minutes to show you what is currently scheduled in each room.</p>
     </div>
 </div>
 
