mobile: Add fosdem-org (iphone) and fosdem-schedule (android)

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -14,6 +14,15 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available from the <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">android market</a>.<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
 </li>
+<li><b>Android: FOSDEM Schedule</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2016">Source code</a>,<br />
+    Available from the <a
+    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">android market</a>.<br />
+</li>
+<li><b>iPhone: fosdem-org</b><br />
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
+    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
+</li>
 <li><b>Windows Phone</b><br />
     <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
     Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
@@ -42,10 +51,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.1/sojourner_0.3.1_all.deb">deb package</a>
-</li>
-<li><b>iPhone: fosdem-iphone</b><br />
-    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
 </li>
 </ul>
 
