--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -144,7 +144,7 @@ Do not leave any valuables in your car!
 The parking of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
-Parking Sablon-Polaert</a>, from there to take the
+Parking Sablon-Poelaert</a>, from there to take the
 <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
 direction Mus&eacute;e du Tram.
 Then follow the <a href="#bus">instructions above</a>.
