index: Add booklet links.

--- a/content/index.html
+++ b/content/index.html
@@ -52,7 +52,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>Schedule</h2>
       <p>
-	The <a href="page:/schedule/">complete schedule</a> for the weekend is now available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a>.
+	The <a href="page:/schedule/">complete schedule</a> for the weekend is now available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a> and as a <a href="asset:booklet">booklet</a> with supplements for <a href="asset:booklet_saturday">Saturday</a> and <a href="asset:booklet_sunday">Sunday</a>.
 	More events happening in the days around the FOSDEM weekend form the <a href="page:/fringe/">FOSDEM Fringe</a>.
       </p>
     </div>
