stands: Brain-Duino

--- a/content/stands.html
+++ b/content/stands.html
@@ -11,7 +11,7 @@ stands:
    - Open hardware laptops
    - JavaCard Pro
    - OpenEmbedded
-   - Brainduino
+   - Brain-Duino
   H (8):
    - CoreOS
    - MongoDB
