add ubuntu phone schedule

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -27,6 +27,10 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
     Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
 </li>
+<li><b>Ubuntu Phone</b><br />
+    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
+    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a.<br />
+</li>
 </ul>
 
 <p>
