--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -29,7 +29,10 @@ Ways to have the schedule with you at all times, without wasting trees:
 </li>
 <li><b>Ubuntu Phone</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a.<br />
+    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a>.<br />
+</li>
+<li><b>Generic mobile web interface</b><br />
+    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
 </li>
 </ul>
 
