--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -19,22 +19,27 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available from the <a
     href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">android market</a>.<br />
 </li>
+<li><b>Android: Giggity</b><br />
+    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
+    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
+    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
+</li>
 <li><b>iPhone: fosdem-org</b><br />
     <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
     Available from <a href="https://itunes.apple.com/au/app/fosdem-org/id941904933?mt=8">the Apple app store</a>.<br />
-</li>
-<li><b>Windows Phone</b><br />
-    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
-    Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
-</li>
-<li><b>Ubuntu Phone</b><br />
-    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a>.<br />
 </li>
 <li><b>N900: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
     Available as direct <a href="https://github.com/loomchild/sojourner/releases/download/v0.3.4/sojourner_0.3.4_all.deb">deb package</a>
+</li>
+<li><b>Ubuntu Phone: FOSDEM</b><br />
+    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
+    Available from the <a href="https://uappexplorer.com/app/fosdem-qml.delijati">Ubuntu app store</a>.<br />
+</li>
+<li><b>Windows Phone: FOSDEM</b><br />
+    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
+    Available from the <a href="https://www.microsoft.com/en-us/store/apps/fosdem/9nblggh5j4kd">Microsoft store</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
     <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
@@ -51,15 +56,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 </p>
 
 <hr />
-
-<h3>Apps for Mobile Devices, tested for 2015, unknown for 2016</h3>
-<ul>
-<li><b>Android: Giggity</b><br />
-    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
-    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
-</li>
-</ul>
 
 <h3>Apps for Mobile Devices, archive from 2014 and before</h3>
 <ul>
