Index: Mention live streams.

--- a/content/index.html
+++ b/content/index.html
@@ -57,6 +57,15 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       </p>
     </div>
 
+    <div class="announcement-block">
+      <h2>Live Streaming and Videos</h2>
+      <p>
+	During the event, there'll be <a href="http://live.fosdem.org/">live
+streams</a> from 24 rooms <a href="page:/schedule/streaming/">indexed
+here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appear on individual talk pages when encoded.
+      </p>
+    </div>
+
   </div>
 
   <div class="news-block">
