--- a/content/index.html
+++ b/content/index.html
@@ -42,9 +42,9 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     %>
 
     <div class="announcement-block">
-      <h2>FOSDEM 2016 &mdash; 30 &amp; 31 January 2016</h2>
+      <h2>Welcome to FOSDEM 2016 &mdash; 30 &amp; 31 January 2016</h2>
       <p>
-        FOSDEM 2016 will take place at ULB Campus Solbosch on Saturday 30 and
+        FOSDEM 2016 is taking place at ULB Campus Solbosch on Saturday 30 and
         Sunday 31 January 2016.
       </p>
     </div>
@@ -52,7 +52,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>Schedule</h2>
       <p>
-	The <a href="page:/schedule/">complete schedule</a> for the weekend is now available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a> and as a <a href="asset:booklet">booklet</a> with supplements for <a href="asset:booklet_saturday">Saturday</a> and <a href="asset:booklet_sunday">Sunday</a>.
+	The <a href="page:/schedule/">complete schedule</a> for the weekend is available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a> and as a <a href="asset:booklet">booklet</a> with supplements for <a href="asset:booklet_saturday">Saturday</a> and <a href="asset:booklet_sunday">Sunday</a>.
 	More events happening in the days around the FOSDEM weekend form the <a href="page:/fringe/">FOSDEM Fringe</a>.
       </p>
     </div>
@@ -60,7 +60,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>Live Streaming and Videos</h2>
       <p>
-	During the event, there'll be <a href="http://live.fosdem.org/">live
+	During the event, there are <a href="http://live.fosdem.org/">live
 streams</a> from 24 rooms <a href="page:/schedule/streaming/">indexed
 here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appear on individual talk pages when encoded.
       </p>
