index: happening now

--- a/content/index.html
+++ b/content/index.html
@@ -44,8 +44,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>Welcome to FOSDEM 2016 &mdash; 30 &amp; 31 January 2016</h2>
       <p>
-        FOSDEM 2016 is taking place at ULB Campus Solbosch on Saturday 30 and
-        Sunday 31 January 2016.
+        FOSDEM 2016 is happening now at ULB Campus Solbosch!
       </p>
     </div>
 
@@ -60,7 +59,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>Live Streaming and Videos</h2>
       <p>
-	During the event, there are <a href="http://live.fosdem.org/">live
+	There are <a href="http://live.fosdem.org/">live
 streams</a> from 24 rooms <a href="page:/schedule/streaming/">indexed
 here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appear on individual talk pages when encoded.
       </p>
