--- a/content/index.html
+++ b/content/index.html
@@ -56,6 +56,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       </p>
     </div>
 
+<!--
     <div class="announcement-block">
       <h2>Live Streaming and Videos</h2>
       <p>
@@ -63,6 +64,12 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 streams</a> from 24 rooms <a href="page:/schedule/streaming/">indexed
 here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appear on individual talk pages when encoded.
       </p>
+    </div>
+-->
+
+    <div class="announcement-block">
+      <h2>Feedback</h2>
+      <p>You may submit feedback on particular talks using the links at the bottom of each individual event page.</p>
     </div>
 
   </div>
