index: Add feedback email.

--- a/content/index.html
+++ b/content/index.html
@@ -69,7 +69,7 @@ here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appe
 
     <div class="announcement-block">
       <h2>Feedback</h2>
-      <p>You may submit feedback on particular talks using the links at the bottom of each individual event page.</p>
+      <p>You may submit feedback on particular talks using the links at the bottom of each individual event page or send other feedback to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.</p>
     </div>
 
   </div>
