index: Post-event update.

--- a/content/index.html
+++ b/content/index.html
@@ -42,32 +42,26 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     %>
 
     <div class="announcement-block">
-      <h2>Welcome to FOSDEM 2016 &mdash; 30 &amp; 31 January 2016</h2>
+      <h2>FOSDEM 2016 is over for another year!</h2>
       <p>
-        FOSDEM 2016 is happening now at ULB Campus Solbosch!
+	The whole <a href="page:/about">team</a> would like to thank everyone for their contribution to another successful event!
       </p>
+	<p>
+	Please tell us about your FOSDEM experience at 
+	<a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+	All your feedback and suggestions for next year will be greatly appreciated.
+	</p><p>
+	You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
+	</p>
+	<h2>Videos</h2>
+	<p>Videos will appear gradually on <a href="http://video.fosdem.org/2016/">video.fosdem.org</a> as they are marked up and encoded over the coming days.  Of course we have not yet had the opportunity to review the actual content, but at this stage we estimate that we captured approximately three-quarters of the event, with good coverage of Saturday afternoon and Sunday in most rooms.</p>
     </div>
 
     <div class="announcement-block">
-      <h2>Schedule</h2>
+      <h2>Fringe</h2>
       <p>
-	The <a href="page:/schedule/">complete schedule</a> for the weekend is available in a variety of formats including <a href="page:/schedule/mobile/">apps for mobile devices</a> and as a <a href="asset:booklet">booklet</a> with supplements for <a href="asset:booklet_saturday">Saturday</a> and <a href="asset:booklet_sunday">Sunday</a>.
-	More events happening in the days around the FOSDEM weekend form the <a href="page:/fringe/">FOSDEM Fringe</a>.
+	If you're still in the region, don't miss the remaining <a href="page:/fringe/">FOSDEM Fringe</a> events!
       </p>
-    </div>
-
-    <div class="announcement-block">
-      <h2>Live Streaming and Videos</h2>
-      <p>
-	There are <a href="http://live.fosdem.org/">live
-streams</a> from 24 rooms <a href="page:/schedule/streaming/">indexed
-here</a>.  Links to <a href="http://video.fosdem.org/2016/">videos</a> will appear on individual talk pages when encoded.
-      </p>
-    </div>
-
-    <div class="announcement-block">
-      <h2>Feedback</h2>
-      <p>You may submit feedback on particular talks using the links at the bottom of each individual event page or send other feedback to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.</p>
     </div>
 
   </div>
