index: Link to #team anchor.

--- a/content/index.html
+++ b/content/index.html
@@ -44,7 +44,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="announcement-block">
       <h2>FOSDEM 2016 is over for another year!</h2>
       <p>
-	The whole <a href="page:/about">team</a> would like to thank everyone for their contribution to another successful event!
+	The whole <a href="page:/about#team">team</a> would like to thank everyone for their contribution to another successful event!
       </p>
 	<p>
 	Please tell us about your FOSDEM experience at 
